# compile-make-sandbox

./: .gitignore  Dockerfile  README.md  package.json
c-exec/: Makefile  README.md
c-greet/: Makefile  README.md
c-greet-cmake/: CMakeLists.txt  README.md  greet.c
c-greet-lib/: CMakeLists.txt  README.md  greet-lib.pc.in
c-greet-module/: README.md
c-greet-module/app/: CMakeLists.txt
c-greet-module/libgreet/: CMakeLists.txt  cmake_uninstall.cmake.in
c-greet-module/libgreet/src/: greet-lib.c
c-greet-pkgconfig/: README.md
c-greet-pkgconfig/app/: CMakeLists.txt
c-greet-pkgconfig/app/src/: main.c
c-greet-pkgconfig/libgreet/: CMakeLists.txt  greet-lib.pc.in
c-main/: Makefile
fortran-greet/: Makefile  README.md  greet.f90
fortran-greet-cmake/: CMakeLists.txt  README.md  cmake_uninstall.cmake
fortran-greet-shared/: README.md
fortran-greet-shared/app/: CMakeLists.txt
fortran-greet-shared/libgreet/: CMakeLists.txt
fortran-greet-static/: README.md
fortran-greet-static/app/: CMakeLists.txt  main.f90
fortran-greet-static/libgreet/: CMakeLists.txt
fortran-main/: Makefile  main.f90
